dist/mealie/Ingress.mealie.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: mealie
spec:
  rules:
    - host: mealie.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
    - host: recipes.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mealie.cmdcentral.xyz
        - recipes.cmdcentral.xyz
      secretName: mealie-tls
